# ffmpeg-decode

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  ffmpeg_file.cpp  ffmpeg_file.h  ffmpeg_scale.cpp  ffmpeg_scale.h  main.cpp
